# BlockChain-BUILDH3R

./: Cargo.toml  README.md  deploy.py  hardhat.config.js  hello_world.cairo  main.rs  package-lock.json  package.json
contracts/: MyContract.sol  SmartAccountContract.sol
contracts/scripts/: deploy.js  interact.js
frontend/: package-lock.json
frontend/src/components/pages/home/wall-section/: index.jsx
smart-contracts/: hardhat.config.js  package-lock.json
src/: main.rs
